@@ -5,6 +5,15 @@ Please add newer entries at the top, list the date and your name with
 email address.
 
 
+2007-Dec-14 UPDATE   Dick Hollenbeck <dick@softplc.com>
+================================================================================
++pcbnew
+    WinEDA_PcbFrame::Other_Layer_Route() now returns bool, so that if the DRC
+    would not allow the new via placement, then it can be checked and the layer
+    change can also then be aborted.  Previously the layer change would happen
+    in mid track if the via could not be placed.
+
+
 2007-Dec-13 UPDATE   Dick Hollenbeck <dick@softplc.com>
 ================================================================================
 +pcbnew
